<resources>
    <string name="ClarabridgeChat_activityConversation">Messages</string>
    <string name="ClarabridgeChat_startOfConversation">This is the start of your conversation with the %1$s team. We\'ll stay in touch to help you get the most out of your app.</string>
    <string name="ClarabridgeChat_welcome">Feel free to leave us a message about anything that\'s on your mind. We\'ll get back to your questions, suggestion or anything else as soon as we can.</string>
    <string name="ClarabridgeChat_messageHint">Type a message&#8230;</string>
    <string name="ClarabridgeChat_btnSend">Send</string>
    <string name="ClarabridgeChat_chooseOption">Choose an Option</string>
    <string name="ClarabridgeChat_btnMenu">Choose an Option</string>
    <string name="ClarabridgeChat_takePhoto">Take a Quick Photo</string>
    <string name="ClarabridgeChat_chooseFromLibrary">Choose from Photo Gallery</string>
    <string name="ClarabridgeChat_chooseFile">Upload a File</string>
    <string name="ClarabridgeChat_shareLocation">Share Location</string>
    <string name="ClarabridgeChat_sendPhoto">Send Photo</string>
    <string name="ClarabridgeChat_send">Send</string>
    <string name="ClarabridgeChat_sendingMessage">Sending…</string>
    <string name="ClarabridgeChat_errorSendingMessage">Message not delivered. Tap to retry.</string>
    <string name="ClarabridgeChat_errorCouldNotConnect">Could not connect to server.</string>
    <string name="ClarabridgeChat_errorUserOffline">No Internet connection.</string>
    <string name="ClarabridgeChat_errorFileTooLarge">Max file size limit exceeded (%1$s).</string>
    <string name="ClarabridgeChat_errorVirusDetected">A virus was detected in your file and it has been rejected.</string>
    <string name="ClarabridgeChat_errorPostback">An error occurred while processing your action. Please try again.</string>
    <string name="ClarabridgeChat_errorFileTypeRejected">Unsupported file type.</string>
    <string name="ClarabridgeChat_errorDisplayImage">Error: Can\'t display image</string>
    <string name="ClarabridgeChat_conversationLoadingText">Loading conversation…</string>
    <string name="ClarabridgeChat_creditMessage">Enter your credit card to send %1$s securely to %2$s.</string>
    <string name="ClarabridgeChat_savedCreditMessage">You\'re about to send %1$s securely to %2$s.</string>
    <string name="ClarabridgeChat_creditErrorMessage">An error occurred while processing the card. Try again or use a different card.</string>
    <string name="ClarabridgeChat_btnPayNow">Pay Now</string>
    <string name="ClarabridgeChat_btnPaymentCompleted">Payment Completed</string>
    <string name="ClarabridgeChat_btnChangeCard">Change Credit Card</string>
    <string name="ClarabridgeChat_imageUploadRetry">Tap to reload image.</string>
    <string name="ClarabridgeChat_imageUploadPreviewNotAvailable">Preview not available.</string>
    <string name="ClarabridgeChat_imageUploadTapToView">Tap to view%1$s image.</string>
    <string name="ClarabridgeChat_problemGettingPhoto">There was a problem retrieving your photo.</string>
    <string name="ClarabridgeChat_problemSavingPhoto">There was a problem saving your photo.</string>
    <string name="ClarabridgeChat_problemLaunchingCamera">There was a problem launching the camera.</string>
    <string name="ClarabridgeChat_unsupportedMessageType">Unsupported message type</string>
    <string name="ClarabridgeChat_unsupportedActionType">Unsupported action type</string>
    <string name="ClarabridgeChat_locationSendingFailed">Could not send location.</string>
    <string name="ClarabridgeChat_locationRetrieveFailed">Could not retrieve location.</string>
    <string name="ClarabridgeChat_locationServicesDenied">Access to location services was denied. To enable, go to this app\'s settings and grant \"Location\" access.</string>
    <string name="ClarabridgeChat_locationServicesDeniedTitle">Location Services Denied</string>
    <string name="ClarabridgeChat_openSettings">Open Settings</string>
    <string name="ClarabridgeChat_webviewLoading">Loading…</string>
    <string name="ClarabridgeChat_relativeTimeJustNow">Just now</string>
    <string name="ClarabridgeChat_relativeTimeMinute">%dm ago</string>
    <string name="ClarabridgeChat_relativeTimeHour">%dh ago</string>
    <string name="ClarabridgeChat_relativeTimeDay">%dd ago</string>
    <string name="ClarabridgeChat_messageStatusDelivered">Delivered</string>
    <string name="ClarabridgeChat_messageStatusSeen">Seen</string>
    <string name="ClarabridgeChat_retrievingFile">Retrieving your file…</string>
    <string name="ClarabridgeChat_notificationFallbackText">Sent a message</string>
    <string name="ClarabridgeChat_conversationListEmpty">No Conversations</string>
    <string name="ClarabridgeChat_conversationLastUpdatedMinute">1 minute ago</string>
    <string name="ClarabridgeChat_conversationLastUpdatedMinutes">%d minutes ago</string>
    <string name="ClarabridgeChat_conversationLastUpdatedHour">1 hour ago</string>
    <string name="ClarabridgeChat_conversationLastUpdatedHours">%d hours ago</string>
    <string name="ClarabridgeChat_conversationLastUpdatedYesterday">Yesterday</string>
    <string name="ClarabridgeChat_conversationListError">Unable to load conversations</string>
    <string name="ClarabridgeChat_btnRetry">Retry</string>
    <string name="ClarabridgeChat_conversationListLastNoMessages">No messages</string>
    <string name="ClarabridgeChat_conversationListLastSentByCurrentUser">You</string>
    <string name="ClarabridgeChat_conversationListLastMessageImage">%s sent an image</string>
    <string name="ClarabridgeChat_conversationListLastMessageFile">%s sent a file</string>
    <string name="ClarabridgeChat_conversationListLastMessageForm">%s sent a form</string>
    <string name="ClarabridgeChat_conversationListLastMessageDefault">%s sent a message</string>
    <string name="ClarabridgeChat_badgeCountMoreThanOneDigit">9+</string>
    <string name="ClarabridgeChat_conversationListNavBar">My conversations</string>
    <string name="ClarabridgeChat_btnNewConversation">New Conversation</string>
    <plurals name="ClarabridgeChat_unreadMessagesText">
        <item quantity="one">%d unread message</item>
        <item quantity="other">%d unread messages</item>
    </plurals>
    <plurals name="ClarabridgeChat_conversationLastUpdatedMinutes">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="ClarabridgeChat_conversationLastUpdatedHours">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
</resources>

