<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ClarabridgeChat_conversationBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="true"
        android:orientation="vertical">

        <View
            android:id="@+id/ClarabridgeChat_actionBarSpace"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:animateLayoutChanges="true" />

        <TextView
            android:id="@+id/ClarabridgeChat_serverBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ClarabridgeChat_errorSnackbarBackgroundColor"
            android:gravity="center_vertical|center_horizontal"
            android:lineSpacingMultiplier="@dimen/ClarabridgeChat_lineSpacingMultiplier"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/ClarabridgeChat_errorCouldNotConnect"
            android:textColor="@color/ClarabridgeChat_header"
            android:textSize="@dimen/ClarabridgeChat_header"
            android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:animationCache="false"
            android:background="@color/ClarabridgeChat_conversationBackground"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:listSelector="@android:color/transparent"
            android:scrollingCache="false"
            android:transcriptMode="alwaysScroll" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ClarabridgeChat_remoteMessageBackground"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ClarabridgeChat_inputTextBackground"
            android:clipChildren="false">

            <com.clarabridge.ui.widget.BackEventEditText
                android:id="@+id/ClarabridgeChat_inputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/ClarabridgeChat_btnSend"
                android:layout_toLeftOf="@+id/ClarabridgeChat_btnSend"
                android:layout_toEndOf="@+id/ClarabridgeChat_btnMenu"
                android:layout_toRightOf="@+id/ClarabridgeChat_btnMenu"
                android:background="@null"
                android:hint="@string/ClarabridgeChat_messageHint"
                android:imeOptions="actionSend"
                android:inputType="textMultiLine|textCapSentences"
                android:lines="@integer/ClarabridgeChat_settings_inputMaxLines"
                android:maxLines="@integer/ClarabridgeChat_settings_inputMaxLines"
                android:minLines="1"
                android:paddingLeft="10dp"
                android:paddingTop="4dp"
                android:paddingRight="10dp"
                android:paddingBottom="4dp"
                android:textColor="@color/ClarabridgeChat_inputTextColor"
                android:textColorHint="@color/ClarabridgeChat_inputTextColorHint"
                android:textSize="@dimen/ClarabridgeChat_inputTextSize" />

            <ImageButton
                android:id="@+id/ClarabridgeChat_btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/ClarabridgeChat_btnSend"
                android:src="@drawable/clarabridgechat_btn_send"
                android:tint="@color/ClarabridgeChat_accent" />

            <ImageButton
                android:id="@+id/ClarabridgeChat_btnMenu"
                android:layout_width="@dimen/ClarabridgeChat_btnMenuSize"
                android:layout_height="@dimen/ClarabridgeChat_btnMenuSize"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/ClarabridgeChat_btnMenu"
                android:scaleType="fitXY"
                android:src="@drawable/clarabridgechat_btn_menu" />

            <View
                android:id="@+id/ClarabridgeChat_btnSendHollow"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignStart="@+id/ClarabridgeChat_btnSend"
                android:layout_alignLeft="@+id/ClarabridgeChat_btnSend"
                android:layout_alignTop="@+id/ClarabridgeChat_btnSend"
                android:background="@drawable/clarabridgechat_bg_send_hollow"
                android:visibility="invisible" />

            <View
                android:id="@+id/ClarabridgeChat_btnSendHollowBorder"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignStart="@+id/ClarabridgeChat_btnSend"
                android:layout_alignLeft="@+id/ClarabridgeChat_btnSend"
                android:layout_alignTop="@+id/ClarabridgeChat_btnSend"
                android:background="@drawable/clarabridgechat_bg_send_hollow_border"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/webview_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>

